# matrix_lib

./: CMakeLists.txt  README.md
include/: matrix.hpp
src/: CMakeLists.txt  matrix.cpp
test/: CMakeLists.txt  test.cpp
